rework of serverless workflow support with event state support
