# integration-tests/automatiko-sw-rest/src/main/resources/api/swagger.json
@@ -110,10 +110,52 @@
 					}
 				}
 			}
+		},
+		"/greeting": {
+			"post": {
+				"operationId": "greet",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Data"
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Data"
+								}
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"components": {
 		"schemas": {
+			"Data": {
+				"type": "object",
+				"properties": {
+					"data": {
+						"$ref": "#/components/schemas/Greet"
+					}
+				}
+			},
+			"Greet": {
+				"type": "object",
+				"properties": {
+					"name": {
+						"type": "string"
+					}
+				}
+			},
 			"Doctor": {
 				"type": "object",
 				"properties": {
